--- a/shopping/shopping/src/main/resources/static/inc/bottom.html
+++ b/shopping/shopping/src/main/resources/static/inc/bottom.html
@@ -1,5 +1,12 @@
 <footer>
-<div class="customer">고객센터 | 오시는길 | 상품문의</div>
+<div class="customer">
+    <br><br>
+    <span><b>COMPANY</b>&ensp;Beer/Lager</span>&emsp;
+    <span><b>OWNER</b>&ensp;홍길동</span>&emsp;
+    <span><b>E-MAIL</b>&ensp;gildong@naver.com</span>&emsp;
+    <span><b>CALL CENTER</b>&ensp;000-111-2222</span><br><br>
+    <span><b>ADDRESS</b>&ensp;경기도 성남시 분당구 장안로62번길 20(분당동)</span>
+</div>
 <br><br>
 Copyright ⓒ Beer/Lager. All Right Reserved.
 </footer>
