--- a/shopping/shopping/src/main/resources/static/inc/top.html
+++ b/shopping/shopping/src/main/resources/static/inc/top.html
@@ -1,66 +1,135 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 
-<header>
-    <div class="logo">
-    <a th:href="@{/home}"><img th:src="@{/image/Logo.jpg}" alt="none"></a>
-    </div>
-
-    <div class="menu">
-    <th:block sec:authorize="isAnonymous()">
-        <b><a th:href="@{/login}">로그인</a></b>&emsp;&ensp;<b><a th:href="@{/join}">회원가입</a></b>
-    </th:block>
-
-    <th:block sec:authorize="hasRole('3')">
-        <b><a th:href="@{/logout}">로그아웃</a></b>
-    </th:block>
-
-    <th:block sec:authorize="hasRole('2')">
-        <b><a th:href="@{/logout}">로그아웃</a></b>&emsp;&ensp;
-        <b>마이페이지</b>&emsp;
-        <b>장바구니</b>&emsp;
-        <b>배송조회</b>
-    </th:block>
-    </div>
-</header>
 
 <nav>
-    <div class="container">
-    <div class="intro">
-        <th:block sec:authorize="isAnonymous()">
-            <b>판매상품</b> &emsp; <b>행사상품</b> &emsp; <b>이벤트</b> &emsp; <b>커뮤니티</b>
-        </th:block>
+    <div id="top_nav" class="top_nav" style="z-index:999; position:fixed;">
+        <div style="float:right;">
+            <img th:src="@{/image/엑스.png}" style="width:40px; height:40px; margin:35px; cursor:pointer;" onclick="off_menu()">
+        </div>
 
         <th:block sec:authorize="hasRole('3')">
-            <div class="admin_user_item">
-            <!--<b><a th:href="@{/admin/ItemType}">상품관리</a></b>&emsp;-->
-                <select name="item_manager" id="item_manager" class="item_manager" onmouseenter="this.size=4" onmouseleave="this.size=1" onchange="this.blur(), move_page(this.value)" onclick="move_page(this.value)">
-                    <option value="op0">상품관리</option>
-                    <option value="op1">상품분류</option>
-                    <option value="op2">상품등록</option>
-                    <option value="op3">상품목록</option>
-                </select>
-            </div>
+            <div style="display:grid; grid-template-columns:1fr 1fr 1fr 1fr;">
 
-            <div class="admin_user_list">
-            <b><a th:href="@{/admin/UserList}"> 회원관리</a></b>&emsp;
-            </div>
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">Item Manager</span><br><br>
+                    <a th:href="@{/admin/ItemCategory}"><span style="font-size:15px;">Category</span></a><br><br>
+                    <a th:href="@{/admin/ItemRegister}"><span style="font-size:15px;">Register</span></a><br><br>
+                    <a th:href="@{/admin/ItemList}"><span style="font-size:15px;">Item List</span></a>
+                </div>
 
-            <div class="admin_user_event">
-            <b> 이벤트</b>&emsp;
-            </div>
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">User Manager</span><br><br>
+                    <a th:href="@{/admin/UserList}"><span style="font-size:15px;">User List</span></a>
+                </div>
 
-            <div class="admin_user_community">
-            <b><a th:href="@{/admin/Community}"> 커뮤니티</a></b>
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">Community Manager</span><br><br>
+                    <span style="font-size:15px;">Community List</span>
+                </div>
+
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">Event Manager</span><br><br>
+                    <span style="font-size:15px;">진행 예정</span><br><br>
+                    <span style="font-size:15px;">진행중</span>
+                </div>
             </div>
         </th:block>
 
         <th:block sec:authorize="hasRole('2')">
-            <b><a th:href="@{/User/ItemList}">판매상품</a></b> &emsp; <b>행사상품</b> &emsp; <b>이벤트</b> &emsp; <b>커뮤니티</b>
+            <div style="display:grid; grid-template-columns:1fr 1fr 1fr 1fr 1fr;">
+
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">About Us</span><br><br>
+                    <span style="font-size:15px;">We Are</span><br><br>
+                    <span style="font-size:15px;">Brand Story</span><br><br>
+                    <span style="font-size:15px;">Location</span>
+                </div>
+
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">Store</span><br><br>
+                    <a th:href="@{/main/ItemList}"><span style="font-size:15px;">All Items</span></a><br><br>
+                    <a th:href="@{/main/ItemList(category = '10')}"><span style="font-size:15px;">Ale Beer</span></a><br><br>
+                    <a th:href="@{/main/ItemList(category = '20')}"><span style="font-size:15px;">Lager Beer</span></a>
+                </div>
+
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">Community</span><br><br>
+                    <span style="font-size:15px;">Community</span><br><br>
+                    <span style="font-size:15px;">Announce</span><br><br>
+                    <span style="font-size:15px;">Review</span><br><br>
+                </div>
+
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">My Page</span><br><br>
+                    <a th:href="@{/User/Basket}"><span style="font-size:15px;">Basket</span></a><br><br>
+                    <span style="font-size:15px;">Pay Point</span><br><br>
+                    <span style="font-size:15px;">Order Check</span><br><br>
+                    <span style="font-size:15px;">Delivery Check</span><br><br>
+                    <a th:href="@{/main/logout}"><span style="font-size:15px;">Log Out</span></a>
+                </div>
+
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">Event</span><br><br>
+                    <span style="font-size:15px;">진행 예정</span><br><br>
+                    <span style="font-size:15px;">현재 진행중</span><br><br>
+                </div>
+            </div>
+        </th:block>
+
+        <th:block sec:authorize="isAnonymous()">
+            <div style="display:grid; grid-template-columns:1fr 1fr 1fr 1fr 1fr;">
+
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">About Us</span><br><br>
+                    <span style="font-size:15px;">We Are</span><br><br>
+                    <span style="font-size:15px;">Brand Story</span><br><br>
+                    <span style="font-size:15px;">Location</span>
+                </div>
+
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">Store</span><br><br>
+                    <a th:href="@{/main/ItemList}"><span style="font-size:15px;">All Items</span></a><br><br>
+                    <a th:href="@{/main/ItemList(category = '10')}"><span style="font-size:15px;">Ale Beer</span></a><br><br>
+                    <a th:href="@{/main/ItemList(category = '20')}"><span style="font-size:15px;">Lager Beer</span></a>
+                </div>
+
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">Community</span><br><br>
+                    <span style="font-size:15px;">Community</span><br><br>
+                    <span style="font-size:15px;">Announce</span><br><br>
+                    <span style="font-size:15px;">Review</span><br><br>
+                </div>
+
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">My Page</span><br><br>
+                    <a th:href="@{/main/join}"><span style="font-size:15px;">Join Us</span></a><br><br>
+                    <a th:href="@{/main/login}"><span style="font-size:15px;">Log In</span></a>
+                </div>
+
+                <div style="margin:200px auto; color:white; text-align:center;">
+                    <span style="font-weight:bold; font-size:25px;">Event</span><br><br>
+                    <span style="font-size:15px;">진행 예정</span><br><br>
+                    <span style="font-size:15px;">현재 진행중</span><br><br>
+                </div>
+            </div>
         </th:block>
     </div>
-    <div class="search">
-        <input type="text"><input type="button" value="🔍" class="search_button" onclick="search();">&emsp;
-    </div>
-    </div>
 </nav>
+
+<header>
+    <div>
+        <a th:href="@{/main/home}"><img th:src="@{/image/logo.png}" alt="none" style="width:250px; height:65px; float:left; margin:10px 5px 20px 20px;"></a>
+        <img th:src="@{/image/메뉴.png}" id="menu_btn" class="menu_btn" onclick="on_menu()" style="width:40px; height:40px; float:right; cursor:pointer; margin:15px;">
+    </div>
+
+    <div class="menu">
+        <th:block sec:authorize="hasRole('3')">
+            <b><a th:href="@{/main/logout}">로그아웃</a></b>
+        </th:block>
+    </div>
+    <br>
+    <br>
+</header>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="/js/inc/Top.js"></script>
