--- a/shopping/shopping/src/main/resources/static/inc/top.html
+++ b/shopping/shopping/src/main/resources/static/inc/top.html
@@ -24,7 +24,7 @@
 
                 <div style="margin:200px auto; color:white; text-align:center;">
                     <span style="font-weight:bold; font-size:25px;">Community Manager</span><br><br>
-                    <span style="font-size:15px;">Community List</span>
+                    <a th:href="@{/main/Community}"><span style="font-size:15px;">Community List</span></a>
                 </div>
 
                 <div style="margin:200px auto; color:white; text-align:center;">
@@ -54,17 +54,17 @@
 
                 <div style="margin:200px auto; color:white; text-align:center;">
                     <span style="font-weight:bold; font-size:25px;">Community</span><br><br>
-                    <span style="font-size:15px;">Community</span><br><br>
+                    <a th:href="@{/main/Community}"><span style="font-size:15px;">Community</span></a><br><br>
                     <span style="font-size:15px;">Announce</span><br><br>
                     <span style="font-size:15px;">Review</span><br><br>
                 </div>
 
                 <div style="margin:200px auto; color:white; text-align:center;">
                     <span style="font-weight:bold; font-size:25px;">My Page</span><br><br>
+                    <span style="font-size:15px;">My Info</span><br><br>
+                    <a th:href="@{/User/Order}"><span style="font-size:15px;">Orders</span></a><br><br>
                     <a th:href="@{/User/Basket}"><span style="font-size:15px;">Basket</span></a><br><br>
                     <span style="font-size:15px;">Pay Point</span><br><br>
-                    <span style="font-size:15px;">Order Check</span><br><br>
-                    <span style="font-size:15px;">Delivery Check</span><br><br>
                     <a th:href="@{/main/logout}"><span style="font-size:15px;">Log Out</span></a>
                 </div>
 
@@ -95,7 +95,7 @@
 
                 <div style="margin:200px auto; color:white; text-align:center;">
                     <span style="font-weight:bold; font-size:25px;">Community</span><br><br>
-                    <span style="font-size:15px;">Community</span><br><br>
+                    <a th:href="@{/main/Community}"><span style="font-size:15px;">Community</span></a><br><br>
                     <span style="font-size:15px;">Announce</span><br><br>
                     <span style="font-size:15px;">Review</span><br><br>
                 </div>
