--- a/shopping/shopping/src/main/resources/static/inc/top.html
+++ b/shopping/shopping/src/main/resources/static/inc/top.html
@@ -18,8 +18,10 @@
                 </div>
 
                 <div style="margin:200px auto; color:white; text-align:center;">
-                    <span style="font-weight:bold; font-size:25px;">User Manager</span><br><br>
-                    <a th:href="@{/admin/UserList}"><span style="font-size:15px;">User List</span></a>
+                    <span style="font-weight:bold; font-size:25px;">Statistic Manager</span><br><br>
+                    <a th:href="@{/admin/UserList}"><span style="font-size:15px;">User List</span></a><br><br>
+                    <span style="font-size:15px;">User Stat</span><br><br>
+                    <span style="font-size:15px;">Item Stat</span>
                 </div>
 
                 <div style="margin:200px auto; color:white; text-align:center;">
